--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,7 +1,20 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    map:cameraBearing="112.5"
+    map:cameraTargetLat="6.269082"
+    map:cameraTargetLng="-75.566475"
+    map:cameraTilt="10"
+    map:cameraZoom="15"
     tools:context=".MapsActivity" />
+
+
+
+
+
+
+
